# omp

./: CMakeLists.txt  LICENSE  README.md  main.cpp
include/: omp.hpp
src/: omp.cpp
